aligned mobile form styles

--- a/src/css/leave-application.css
+++ b/src/css/leave-application.css
@@ -99,6 +99,10 @@
   margin-bottom: 18px;
 }
 
+.leave-application-form-text-fields {
+  margin-bottom: 20px;
+}
+
 .leave-application-form-input {
   display: block;
   width: 100%;
