--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -25,7 +25,7 @@
           alt="Girl in headphones learning"
           loading="lazy"
         />
-        <h3 class="leave-application-image-card-heading">1000</h3>
+        <p class="leave-application-image-card-heading">1000</p>
         <p class="leave-application-image-card-text">
           of our online English language lessons! This journey has been full of
           discovery, growth and unforgettable moments, and we are happy to share
@@ -33,50 +33,52 @@
         </p>
       </div>
       <form class="leave-application-form">
-        <div class="leave-application-form-field">
-          <label>
-            <input
-              class="leave-application-form-input"
-              type="text"
-              name="user-name"
-              id="user-name"
-              placeholder="Name"
-              pattern="[A-Za-z] .{3,}"
-          /></label>
-        </div>
+        <div class="leave-application-form-text-fields">
+          <div class="leave-application-form-field">
+            <label>
+              <input
+                class="leave-application-form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                placeholder="Name"
+                pattern="[A-Za-z] .{3,}"
+            /></label>
+          </div>
 
-        <div class="leave-application-form-field">
-          <label>
-            <input
-              class="leave-application-form-input"
-              type="email"
-              name="user-email"
-              id="user-email"
-              placeholder="Email"
-          /></label>
-        </div>
+          <div class="leave-application-form-field">
+            <label>
+              <input
+                class="leave-application-form-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+                placeholder="Email"
+            /></label>
+          </div>
 
-        <div class="leave-application-form-field">
-          <label>
-            <input
-              class="leave-application-form-input"
-              type="tel"
-              name="user-phone"
-              id="user-phone"
-              placeholder="Phone"
-          /></label>
-        </div>
+          <div class="leave-application-form-field">
+            <label>
+              <input
+                class="leave-application-form-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                placeholder="Phone"
+            /></label>
+          </div>
 
-        <div class="leave-application-form-field">
-          <label>
-            <textarea
-              class="leave-application-form-comment"
-              name="comment"
-              id="user-comment"
-              rows="3"
-              placeholder="Comment"
-            ></textarea>
-          </label>
+          <div class="leave-application-form-field">
+            <label>
+              <textarea
+                class="leave-application-form-comment"
+                name="comment"
+                id="user-comment"
+                rows="3"
+                placeholder="Comment"
+              ></textarea>
+            </label>
+          </div>
         </div>
 
         <div class="leave-application-form-field-teachers">
