--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -1,5 +1,5 @@
 <section class="leave-application">
-  <div class="container">
+  <div class="container leave-application-container">
     <div class="leave-application-heading">
       <h2 class="leave-application-heading-title with-accent">
         Leave an <span class="accent">application</span>
@@ -18,10 +18,10 @@
         <img
           class="leave-application-image"
           srcset="
-            ../img/leave-application/leave-application-image.png    1x,
-            ../img/leave-application/leave-application-image@2x.png 2x
+            ./img/leave-application/leave-application-image.png    1x,
+            ./img/leave-application/leave-application-image@2x.png 2x
           "
-          src="../img/leave-application/leave-application-image.png"
+          src="./img/leave-application/leave-application-image.png"
           alt="Girl in headphones learning"
           loading="lazy"
         />
