build: added base structure and optimized images avif webp png x1 x2

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,1 +1,60 @@
-<section>reviews</section>
+<!-- REVIEWS -->
+<section class="reviews">
+  <div class="container">
+    <h2 class="reviews-title">What our students say</h2>
+    <p class="reviews-description">
+      Hear from our students about their learning journey with us, as they share
+      their experiences, progress, and the transformative impact
+    </p>
+    <ul class="reviews-list">
+      <!-- REVIEW 1 -->
+      <li class="reviews-item">
+        <div class="reviews-item-wrapper">
+          <div class="reviews-item-box"><img src="" alt="" /></div>
+
+          <div class="reviews-item-thumb">
+            <h3 class="reviews-item-title">Anna</h3>
+            <h4 class="reviews-item-subtitle">Student</h4>
+          </div>
+        </div>
+        <p class="review-item-description">
+          My experience at the language school has been nothing short of
+          amazing. The teachers are dedicated and the learning environment is
+          stimulating. I feel more confident in my English skills.
+        </p>
+      </li>
+      <!-- REVIEW 2 -->
+      <li class="reviews-item">
+        <div class="reviews-item-wrapper">
+          <div class="reviews-item-box"><img src="" alt="" /></div>
+
+          <div class="reviews-item-thumb">
+            <h3 class="reviews-item-title">Mykhailo</h3>
+            <h4 class="reviews-item-subtitle">Student</h4>
+          </div>
+        </div>
+        <p class="review-item-description">
+          The school offers a great balance of language theory and practical
+          exercises. The personalized feedback from the teachers has helped me
+          improve my weak areas.
+        </p>
+      </li>
+      <!-- REVIEW 3 -->
+      <li class="reviews-item">
+        <div class="reviews-item-wrapper">
+          <div class="reviews-item-box"><img src="" alt="" /></div>
+
+          <div class="reviews-item-thumb">
+            <h3 class="reviews-item-title">Victoria</h3>
+            <h4 class="reviews-item-subtitle">Student</h4>
+          </div>
+        </div>
+        <p class="review-item-description">
+          I love the dynamic and interactive teaching methods used here. It's a
+          great place to learn English in a fun and effective way. I have
+          definitely seen a big improvement in my language skills.
+        </p>
+      </li>
+    </ul>
+  </div>
+</section>
