added hero layout

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,1 +1,14 @@
-<section>hero</section>
+<section class="hero">
+  <div class="container">
+    <h1 class="hero-header">
+      Discover the joy of learning
+      <span class="hero-header-english">English</span> with us!
+    </h1>
+    <a href="#leave-application" class="hero-button">Leave an application</a>
+    <a href="#footer" class="scroll-to-bottom">
+      <svg class="scroll-to-bottom-icon" width="20" height="20">
+        <use href="./img/icons.svg#icon-check"></use>
+      </svg>
+    </a>
+  </div>
+</section>
