--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -7,6 +7,7 @@
   --soft-green: #bee8cc;
   --gray: #f3f5f6;
   --white: #fff;
+  --soft-white: rgba(255, 255, 255, 0.5);
   --grey-bg-image: rgb(128, 127, 127);
   --animation-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
