--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,7 +1,9 @@
 <!-- REVIEWS -->
 <section class="reviews">
   <div class="container">
-    <h2 class="reviews-title">What our students say</h2>
+    <h2 class="reviews-title">
+      What our <span class="reviews-title-accent">students</span> say
+    </h2>
     <p class="reviews-description">
       Hear from our students about their learning journey with us, as they share
       their experiences, progress, and the transformative impact
@@ -10,14 +12,28 @@
       <!-- REVIEW 1 -->
       <li class="reviews-item">
         <div class="reviews-item-wrapper">
-          <div class="reviews-item-box"><img src="" alt="" /></div>
+          <div class="reviews-item-box">
+            <img
+              srcset="
+                ./img/reviews/review-1/review-pic-1.avif    1x,
+                ./img/reviews/review-1/review-pic-1@2x.avif 2x,
+                ./img/reviews/review-1/review-pic-1.webp    1x,
+                ./img/reviews/review-1/review-pic-1@2x.webp 2x,
+                ./img/reviews/review-1/review-pic-1.png     1x,
+                ./img/reviews/review-1/review-pic-1@2x.png  2x
+              "
+              src="./qimg/reviews/review-1/review-pic-1.png"
+              alt="student Anna"
+              loading="lazy"
+            />
+          </div>
 
           <div class="reviews-item-thumb">
             <h3 class="reviews-item-title">Anna</h3>
             <h4 class="reviews-item-subtitle">Student</h4>
           </div>
         </div>
-        <p class="review-item-description">
+        <p class="reviews-item-description">
           My experience at the language school has been nothing short of
           amazing. The teachers are dedicated and the learning environment is
           stimulating. I feel more confident in my English skills.
@@ -26,14 +42,28 @@
       <!-- REVIEW 2 -->
       <li class="reviews-item">
         <div class="reviews-item-wrapper">
-          <div class="reviews-item-box"><img src="" alt="" /></div>
+          <div class="reviews-item-box">
+            <img
+              srcset="
+                ./img/reviews/review-2/review-pic-2.avif    1x,
+                ./img/reviews/review-2/review-pic-2@2x.avif 2x,
+                ./img/reviews/review-2/review-pic-2.webp    1x,
+                ./img/reviews/review-2/review-pic-2@2x.webp 2x,
+                ./img/reviews/review-2/review-pic-2.png     1x,
+                ./img/reviews/review-2/review-pic-2@2x.png  2x
+              "
+              src="./img/reviews/review-2/review-pic-2.png"
+              alt="student Mykhailo"
+              loading="lazy"
+            />
+          </div>
 
           <div class="reviews-item-thumb">
             <h3 class="reviews-item-title">Mykhailo</h3>
             <h4 class="reviews-item-subtitle">Student</h4>
           </div>
         </div>
-        <p class="review-item-description">
+        <p class="reviews-item-description">
           The school offers a great balance of language theory and practical
           exercises. The personalized feedback from the teachers has helped me
           improve my weak areas.
@@ -42,14 +72,28 @@
       <!-- REVIEW 3 -->
       <li class="reviews-item">
         <div class="reviews-item-wrapper">
-          <div class="reviews-item-box"><img src="" alt="" /></div>
+          <div class="reviews-item-box">
+            <img
+              srcset="
+                ./img/reviews/review-3/review-pic-3.avif    1x,
+                ./img/reviews/review-3/review-pic-3@2x.avif 2x,
+                ./img/reviews/review-3/review-pic-3.webp    1x,
+                ./img/reviews/review-3/review-pic-3@2x.webp 2x,
+                ./img/reviews/review-3/review-pic-3.png     1x,
+                ./img/reviews/review-3/review-pic-3@2x.png  2x
+              "
+              src="./img/reviews/review-3/review-pic-3.png"
+              alt="student Victoria"
+              loading="lazy"
+            />
+          </div>
 
           <div class="reviews-item-thumb">
             <h3 class="reviews-item-title">Victoria</h3>
             <h4 class="reviews-item-subtitle">Student</h4>
           </div>
         </div>
-        <p class="review-item-description">
+        <p class="reviews-item-description">
           I love the dynamic and interactive teaching methods used here. It's a
           great place to learn English in a fun and effective way. I have
           definitely seen a big improvement in my language skills.
