--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -78,6 +78,11 @@
     gap: 32px;
   }
 }
+@media only screen and (min-width: 1280px) {
+  .reviews-list {
+    padding: 0 64px;
+  }
+}
 /* SECTION LIST ITEM*/
 .reviews-item {
   padding: 20px;
@@ -101,11 +106,11 @@
     flex-basis: calc((100% - 32px) / 2);
   }
 }
-/* @media only screen and (min-width:1280px) {
+@media only screen and (min-width: 1280px) {
   .reviews-item {
     flex-basis: calc((100% - 2 * 32px) / 3);
   }
-} */
+}
 .reviews-item-wrapper {
   display: flex;
   align-items: center;
