--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -1,5 +1,5 @@
 <section class="leave-application">
-  <div class="container leave-application-container">
+  <div class="container">
     <div class="leave-application-heading">
       <h2 class="leave-application-heading-title with-accent">
         Leave an <span class="accent">application</span>
