--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -78,11 +78,11 @@
     gap: 32px;
   }
 }
-@media only screen and (min-width: 1280px) {
+/* @media only screen and (min-width: 1280px) {
   .reviews-list {
     padding: 0 64px;
   }
-}
+} */
 /* SECTION LIST ITEM*/
 .reviews-item {
   padding: 20px;
