--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,1 +1,34 @@
-<section>about us</section>
+<section class="about-section" id="About">
+  <div class="container">
+    <div class="about-title-container">
+      <h2 class="section-title">
+        About <span class="section-title-accent">Us</span>
+      </h2>
+      <p class="section-text">
+        We are dedicated to providing engaging and effective English language
+        courses in a supportive and stimulating learning environment
+      </p>
+    </div>
+    <div class="about-list-container">
+      <ol class="about-list list">
+        <li class="about-item item">
+          <!-- <p class="about-number">01</p> -->
+          <p class="about-text">Expert, innovative teaching staff</p>
+        </li>
+        <li class="about-item item">
+          <!-- <p class="about-number">02</p> -->
+          <p class="about-text">Wide range of course levels and options</p>
+        </li>
+        <li class="about-item item">
+          <!-- <p class="about-number">03</p> -->
+          <p class="about-text">Multicultural learning environment</p>
+        </li>
+        <li class="about-item item">
+          <!-- <p class="about-number">04</p> -->
+          <p class="about-text">Comprehensive language support services</p>
+        </li>
+        <div class="about-emoji"><img src="" alt="emoji girl" /></div>
+      </ol>
+    </div>
+  </div>
+</section>
