fix: change titles to paragraph

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -29,8 +29,8 @@
           </div>
 
           <div class="reviews-item-thumb">
-            <h3 class="reviews-item-title">Anna</h3>
-            <h4 class="reviews-item-subtitle">Student</h4>
+            <p class="reviews-item-title">Anna</p>
+            <p class="reviews-item-subtitle">Student</p>
           </div>
         </div>
         <p class="reviews-item-description">
@@ -59,8 +59,8 @@
           </div>
 
           <div class="reviews-item-thumb">
-            <h3 class="reviews-item-title">Mykhailo</h3>
-            <h4 class="reviews-item-subtitle">Student</h4>
+            <p class="reviews-item-title">Mykhailo</p>
+            <p class="reviews-item-subtitle">Student</p>
           </div>
         </div>
         <p class="reviews-item-description">
@@ -89,8 +89,8 @@
           </div>
 
           <div class="reviews-item-thumb">
-            <h3 class="reviews-item-title">Victoria</h3>
-            <h4 class="reviews-item-subtitle">Student</h4>
+            <p class="reviews-item-title">Victoria</p>
+            <p class="reviews-item-subtitle">Student</p>
           </div>
         </div>
         <p class="reviews-item-description">
