--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,34 +1,36 @@
-<<<<<<< HEAD
-<section class="proposal-section">
-  <div class="container">
-    <h2>Proposal to leave an application</h2>
-    <strong>Master the Language with Our English Package!</strong>
-    <div>
-      <h3>Power of English</h3>
-      <ul>
-        <li>
-          <p>
+<section class="container">
+  <div class="proposal-section">
+    <h2 class="visually-hidden">Proposal to leave an application</h2>
+    <strong class="proposal-appeal"
+      >Master the <span class="proposal-accent">Language</span> with Our English
+      Package!</strong
+    >
+    <div class="proposal-content-wrap">
+      <h3 class="proposal-aux-title">Power of English</h3>
+      <ul class="proposal-list">
+        <li class="proposal-list-item">
+          <div class="proposal-list-item-icon"></div>
+          <p class="proposal-list-item-text">
             Dive into captivating lessons designed to stimulate your curiosity.
           </p>
         </li>
-        <li>
-          <p>
+        <li class="proposal-list-item">
+          <div class="proposal-list-item-icon"></div>
+          <p class="proposal-list-item-text">
             Learn in a nurturing setting where every student's progress matters.
           </p>
         </li>
-        <li>
-          <p>
+        <li class="proposal-list-item">
+          <div class="proposal-list-item-icon"></div>
+          <p class="proposal-list-item-text">
             Experience the satisfaction of real progress as your language skills
             and confidence grow with every session.
           </p>
         </li>
-        <a href="#leave-application">Leave an application</a>
       </ul>
+      <a class="button proposal-button" href="#leave-application"
+        >Leave an application</a
+      >
     </div>
   </div>
-  =======
-  <section>
-    <div class="container">proposal to leave an application</div>
-    >>>>>>> 06b24791756f82fa023bc8c4ebc83fb110ae15fa
-  </section>
 </section>
