--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,72 @@
 <footer class="footer">
   <div class="container">
-    <div class="footer-top"></div>
+    <div class="footer-top">
+      <a href="index.html" class="footer-logo"
+        >english<span class="footer-item-accent">excellence</span>.</a
+      >
+      <address class="footer-address">
+        <ul class="footer-list">
+          <li class="footer-list-item">
+            <p class="item-title">Phone number:</p>
+            <a href="tel:+380684439426" class="footer-item"
+              >+380 (68) 443-94-26</a
+            >
+          </li>
+          <li class="footer-list-item">
+            <p class="item-title">Address:</p>
+            <a href="" class="footer-item">32a M. Bazhana ave</a>
+          </li>
+        </ul>
+      </address>
+      <nav class="footer-nav">
+        <ul class="footer-list footer-list-menu">
+          <li class="footer-list-item">
+            <a href="" class="footer-item">About us</a>
+          </li>
+          <li class="footer-list-item">
+            <a href="" class="footer-item">Our lessons</a>
+          </li>
+          <li class="footer-list-item">
+            <a href="" class="footer-item">Teachers</a>
+          </li>
+          <li class="footer-list-item">
+            <a href="" class="footer-item">Reviews</a>
+          </li>
+          <li class="footer-list-item">
+            <a href="" class="footer-item">Contact us</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer-social">
+        <li>
+          <a
+            href="https://www.facebook.com/goITclub/"
+            class="footer-social-item"
+          >
+            <svg class="footer-icon" width="26" height="26">
+              <use href="./img/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/goitclub/"
+            class="footer-social-item"
+          >
+            <svg class="footer-icon" width="26" height="26">
+              <use href="./img/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/c/GoIT" class="footer-social-item">
+            <svg class="footer-icon" width="26" height="26">
+              <use href="./img/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
     <div class="footer-bottom">
       <p class="text">&#169;2023 English Excellence. All rights reserved.</p>
       <ul class="footer-bottom-list">
