--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -4,7 +4,7 @@
       <h2 class="section-title">
         About <span class="section-title-accent">Us</span>
       </h2>
-      <p class="section-text">
+      <p class="about-section-text">
         We are dedicated to providing engaging and effective English language
         courses in a supportive and stimulating learning environment
       </p>
@@ -27,7 +27,17 @@
           <!-- <p class="about-number">04</p> -->
           <p class="about-text">Comprehensive language support services</p>
         </li>
-        <div class="about-emoji"><img src="" alt="emoji girl" /></div>
+        <div class="about-emoji">
+          <img
+            srcset="
+              ../img/about-us/memoji.png    1x,
+              ../img/about-us/memoji@2x.png 2x
+            "
+            src="../img/about-us/memoji.png"
+            alt="emoji girl"
+            loading="lazy"
+          />
+        </div>
       </ol>
     </div>
   </div>
