--- a/src/css/main.css
+++ b/src/css/main.css
@@ -73,6 +73,72 @@
   }
 }
 
+.section {
+  text-align: center;
+  padding: 40px 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .section {
+    padding: 50px 0;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .section {
+    padding: 75px 0;
+  }
+}
+
+.section-title {
+  margin-bottom: 16px;
+
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.13;
+  letter-spacing: -0.02em;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-title {
+    font-size: 40px;
+    line-height: 1.2;
+    letter-spacing: -0.02em;
+  }
+}
+
+.section-title-accent {
+  position: relative;
+}
+
+.section-title-accent::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  width: 100%;
+
+  border-bottom: 20px solid var(--soft-green);
+  border-radius: 8px;
+  z-index: -1;
+}
+
+.section-description {
+  color: var(--soft-black);
+
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-description {
+    font-size: 18px;
+    line-height: 1.67;
+    letter-spacing: -0.02em;
+  }
+}
+
 .button {
   padding: 14px 87px;
   min-width: 280px;
