fix mobile background image

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -29,7 +29,7 @@
         rgba(0, 0, 0, 0.4) 39.23%,
         rgba(0, 0, 0, 0) 66.28%
       ),
-      url('../img/hero/bg-mobile.jpg@2x.jpg');
+      url('../img/hero/bg-mobile@2x.jpg');
   }
 }
 @media only screen and (min-width: 768px) {
