minor changes on the leave application section

--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -1,4 +1,4 @@
-<section class="leave-application">
+<section class="leave-application" id="leave-application">
   <div class="container">
     <div class="leave-application-heading">
       <h2 class="leave-application-heading-title with-accent">
@@ -25,7 +25,7 @@
           alt="Girl in headphones learning"
           loading="lazy"
         />
-        <p class="leave-application-image-card-heading">1000</p>
+        <span class="leave-application-image-card-heading">1000</span>
         <p class="leave-application-image-card-text">
           of our online English language lessons! This journey has been full of
           discovery, growth and unforgettable moments, and we are happy to share
@@ -100,6 +100,7 @@
                 id="teacher-maria"
                 name="teacher"
                 value="maria"
+                checked
               />
 
               <label
